# scripts

./: .gitignore  .gitmodules  README  README~  nlispy.py  pcd_mass_viewer.cpp  sim  toinstall  toinstall.sh  wass.py
ML/LR/: README  ex_old  loaddata.py  main.py
OS/: main2.cpp  outwithbugs  sort.cpp  sort2.cpp
OS/oldsort/: input  numbers  out  outwithbugs  sort  sort.cpp  sortwithnum.cpp  writedoubles.cpp  writer
TreeProject/: .project
autochmo/: main.py  test.html
cf/: 1a.hs  266b.hs  61a.hs  template.hs
clojure/: agent2.clojure  hello2.clojure
consoleflags/: ConsoleFlag.py  FlagReader.py  main.py~
cpp2013/tmp/: tmp  (+3 more)
cppexp/pcl/pcl_mass_view/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcd_mass_viewer.cpp  pcl_mass_viewer
cppexp/pcl/people_detect/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ground_based_rgbd_people_detector  main.cpp
cppocv/: Makefile  README  main.cpp  make
cpyext/: README
fuse/: cfs  client  createfs  ftest  ftest.c  log.c
gcar/: Oslam.py  onlineslam.py  robot.py  robot2.py  tmp.py  twiddle.py
haskell/: h2.hs  input  minortasks.hs  twiddle.hs
haskellHW/: filework.hs  h2.hs  h3.hs  hello.hs  output  tree1.hs  twiddle.hs
knowledgeengine/: database.sql  query.py  query.py~
markov/: fast_markov.py
mysqlpy/: config.py~  mysqlwork.py~  query.py  query.py~
not_dull_wallpaper/: main.py
ocv/: make_photo.py  st_make_photo.py  stereo_calib.xml
ocv/OpenCVReprojectImageToPointCloud/: CMakeCache.txt  CMakeLists.txt  FindOpenCV.cmake  Makefile  OpenCVReprojectImageToPointCloud  cmake_install.cmake  opencv_reproject_image_pcl.cpp
ocv/cpp/predator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lk  lk2  lkdemo.cpp  lktrack.cpp  lktracker.cpp  lktracker.h  main  main.cpp
os2/: brut.c  brut2  brut2.c  client.c
os2012/: README
panda/: libtest.so.1.0  main.py  sho.py
pb/: main.py
previewwork/: copy.py  imageselecter.py
pyprj/: loadmatrix.py
pyweather/: weather.py
reminder/: daemon.py  main.py  notimodel.py  reminder.db  reminderc.py  reminders.db
scala/: happybirthday.scala  hw2.scala  hw3.scala  hw4.scala  hw5.scala  hw6.scala  hw7.scala  twiddle.scala
tests/: testsample.py
textdict/: prefixtree.py  textdict.py
tmpcpp/: Makefile  main  main.cpp
vk/: ConfigWork.py  MusicPlayer.py  file.dot  madsample.py  network.py  vk_auth.py  vk_config.py  vkmplayer.py  vkparsing.py  vkplayer.py
vkpars/: auth_sample.py  musiclikeness.py  page.html  vk_auth.py
vkplayer/: ConfigWork.py  ThreadPlayer.py  vkMusicManager.py  vk_config.py
(+747 files in other folders)
